test_scores/negative_dimers/features/P42336.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P42336.pkl.xz